Version 4.14

* BUGFIX: Fixed a bug where ContextAwarePolicyAdapter didn't set a fallback policy.

Version 4.13

2019-04-11 4.13.187

* FEATURE: Add support for a hash tree builder that uses blinding masks.
* IMPROVEMENT: All errors that occur during the verification process while fetching a resource (e.g extender, publications file) are caught and "mapped" to the NA verification result.

Version 4.12

2018-09-14 4.12.181

* FEATURE: Add support for receiving pushed aggregator/extender configuration updates.
* FEATURE: Create a signature by prepending a lower aggregation hash chain to an existing signature.
* FEATURE: Add AggregationHashChainBuilder to extract aggregation hash chains from leaf nodes
* IMPROVEMENT: Separated extender and signer settings in tests and properties.
* IMPROVEMENT: Added convenience methods for creating TLVElement and setting its content.
* IMPROVEMENT: For aggregation and extension requests take HMAC algorithm from credentials.
* IMPROVEMENT: Add option to set HMAC algorithm that is used in tests via integrationtest.properties.
* IMPROVEMENT: Verify calendar hash chain consistency when extending a signature
* IMPROVEMENT: Add option to supply metadata together with leaf node when using TreeBuilder
* BUGFIX: KSI close now closes publications client/service.
* BUGFIX: Tests are now closing services, clients and KSI.
* BUGFIX: Hash data imprint when hashing DataHash object.

Version 4.11

2018-01-09 4.11.153

* FEATURE: Now Possible to extend with TCPClient. Also possible to initialize SigingTCPClient and ExtenderTCPClient separately. Deprecated TCPClient(TCPClientSettings) constructor.
* IMPROVEMENT: Added support for Java 9. Removed support for Java 5 and Java 6.
* IMPROVEMENT: Removed old deprecated methods.
* IMPROVEMENT: Added default verification policy and default context aware verification policy.
* IMPROVEMENT: BlockSigner returns signature in the same order as the data hashes were added to queue.